Updated Background Color
Changed the header background to allow more contrast with the text

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 }
 /*adds a background to the header, as well as padding to the elements within*/
 header {
-  background: #DA1111;
+  background: #990B0B;
   padding: 30px;
 }
 /*sets the 'main' container's margins to a percentage of 
