--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ footer {
 /*aligns the text to the center of the container, colors it, bolds it, sizes it, & removes space underneath*/
 h1 {
   text-align : center;
-  color : #0F0000;
+  color : #E7E7E7;
   font-weight : bolder;
   font-size : 52px;
   margin-bottom : -20px;
